--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container max-w-md mx-auto p-4">
             <h2 class="text-2xl font-semibold font-['Crimson Pro'] uppercase mt-10 mb-8">CREATE AN ACCOUNT</h2>
             <h3 class="text-xl font-normal font-['Crimson Pro'] capitalize mb-6">Let's Get Started with Your Sign Up</h3>
-            <form>
+            <form name="signUp" onsubmit="handleSignUp(event)">
                 <div class="form mb-6">
                     <input type="text" id="name" name="name" placeholder="Name" required class="border-b-2 border-[#333] bg-transparent p-1 w-full focus:border-[#333] outline-none transition border-opacity-30">
                 </div>
@@ -29,6 +29,15 @@
                 <div class="form mb-6">
                     <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm Password" required class="border-b-2 border-[#333] bg-transparent p-1 w-full focus:border-[#333] outline-none transition border-opacity-30">
                 </div>
+
+                <div id="passwordLength" class="hidden text-red-500 font-semibold">
+                    <p class="text-center mb-4 ">Password should be more than 8 Characters!</p>
+                </div>
+
+                <div id="passwordMismatch" class="hidden text-red-500 font-semibold">
+                    <p class="text-center mb-4 ">Password Does not Match</p>
+                </div>
+
                 <button type="submit" class="style-button btn-success rounded-lg bg-[#295700] hover:bg-[#4D732A] flex w-[400px] h-[50px] justify-center items-center gap-20 flex-shrink-0 text-white font-monda text-24 font-semibold leading-[140%] tracking-[0.96px] capitalize">Sign Up</button>
                 <br>
                 <a href="https://accounts.google.com/o/" class="style-button btn-success style-button btn-success rounded-lg bg-[#295700] hover:bg-[#4D732A] flex w-[400px] h-[50px] justify-center items-center gap-20 flex-shrink-0 text-white font-monda text-24 font-semibold leading-[140%] tracking-[0.96px] capitalize">Sign Up with Google</a>
@@ -36,5 +45,6 @@
             </form>
         </div>
     </div>
+    <script src="SignUp.js"></script>
 </body>
 </html>
