linked submit buttons

--- a/authentication.html
+++ b/authentication.html
@@ -23,7 +23,7 @@
                 <input type="text" id="code" name="code" class="text-center inline-block w-20" maxlength="1"/>
         </div> 
         <div class="flex px-20 py-0 justify-end">
-            <button type="submit" class="style-button btn-success rounded-lg bg-[#295700] w-[300px] h-[50px]  text-white font-montserrat font-semibold capitalize">submit</button>
+            <button type="submit" class="style-button btn-success rounded-lg bg-[#295700] w-[300px] h-[50px]  text-white font-montserrat font-semibold capitalize"><a href="signin.html">submit</a></button>
         </div>
 
         <p class="text-center mt-5">It may take a minute to receive your code.<br>
