--- a/signin.html
+++ b/signin.html
@@ -32,7 +32,7 @@
                     <p class="text-center mb-4">Incorrect Password!</p>
                 </div>
                 
-                <button type="submit" class="style-button btn-success rounded-lg bg-[#295700] hover:bg-[#4D732A] flex w-[400px] h-[50px] justify-center items-center mt-50 flex-shrink-0 text-white font-monda text-24 font-semibold leading-[140%] tracking-[0.96px] capitalize">Sign In</button>
+                <button type="submit" class="style-button btn-success rounded-lg bg-[#295700] hover:bg-[#4D732A] flex w-[400px] h-[50px] justify-center items-center mt-50 flex-shrink-0 text-white font-monda text-24 font-semibold leading-[140%] tracking-[0.96px] capitalize"><a href="https://thrive-project.vercel.app/">Sign In</a></button>
                 <br>
                 <a href="https://accounts.google.com/o/" class="style-button btn-success style-button btn-success rounded-lg bg-[#295700] hover:bg-[#4D732A] flex w-[400px] h-[50px] justify-center items-center gap-20 flex-shrink-0 text-white font-monda text-24 font-semibold leading-[140%] tracking-[0.96px] capitalize">Sign In with Google</a>
                 <p class="text-center mt-6">Don’t have an account ?<a href="index.html" class="hover:text-[#4D732A] text-[#295700]">Register</a></p>
